# prosouze-ai

./: Dockerfile  Makefile  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_08_23_1752-22323bf768fe_Q3_C_T_promty.py
docker/: docker-compose.yml
src/: main.py
src/app/: create_app.py  register_models.py  telegram.py
src/entities/: base_model.py
src/entities/promty/: __init__.py  model.py
src/features/simple_talker/: __init__.py  dto.py  route.py  schema.py  service.py  use_case.py
src/infrastructure/gigachat/: __init__.py  auth.py  driver.py
src/routes/: __init__.py
src/routes/v1/: __init__.py
src/shared/api/: postgresql.py
src/shared/config/: __init__.py  _mode.py  logger_config.py  settings.py
src/shared/lib/fastapi/: request.py
